[gd_scene load_steps=4 format=3 uid="uid://db6vm4x30gt2y"]

[ext_resource type="Script" path="res://interface.gd" id="1_3ebu8"]

[sub_resource type="LabelSettings" id="LabelSettings_eegl4"]
font_size = 24
font_color = Color(0.0980392, 0.470588, 0.105882, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sj330"]
font_size = 48
font_color = Color(0.0987666, 0.470171, 0.105083, 1)

[node name="Interface" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
script = ExtResource("1_3ebu8")

[node name="IncomeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 101.0
offset_bottom = 104.0
text = "+1"
expand_icon = true

[node name="IncomeCost" type="Label" parent="IncomeButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 99.0
offset_right = 93.0
offset_bottom = 122.0
text = "10$"
label_settings = SubResource("LabelSettings_eegl4")
horizontal_alignment = 1

[node name="MoneyCount" type="Label" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 15.0
offset_right = 1112.0
offset_bottom = 40.0
text = "0"
label_settings = SubResource("LabelSettings_sj330")
horizontal_alignment = 2

[node name="AutodolbButton" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 146.0
offset_right = 101.0
offset_bottom = 240.0
text = "autodolb"
expand_icon = true

[node name="AutodolbCost" type="Label" parent="AutodolbButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 99.0
offset_right = 93.0
offset_bottom = 122.0
text = "10$"
label_settings = SubResource("LabelSettings_eegl4")
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="IncomeButton" to="." method="_on_income_button_pressed"]
[connection signal="pressed" from="AutodolbButton" to="." method="_on_autodolb_button_pressed"]
